[tool.poetry]
name = "ct6"
version = "10.1"
description = ""
authors = ["Paul Austen <pjaos@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ct6" },
    { include = "lib" },
    { include = "picow" }
]
include = [
    { path = "assets", format = ["sdist", "wheel"] },
    { path = "pyproject.toml", format = ["sdist", "wheel"] },
]


[tool.poetry.dependencies]
pyreadline3 = "*"
python = "^3.10.12"
# Fix security vulnerability reported by github dependabot.
cryptography = "^44.0.1"
paramiko = "^3.4.0"
numpy = "*"
# requires (on debian based Linux platforms)
# sudo apt-get install python3-dev default-libmysqlclient-dev build-essential
# to install mysqlclient
mysqlclient = "*"
paho-mqtt = "*"
p3lib = "^1.1.93"
bokeh = "3.6.0"
requests = "*"
ifaddr = "*"
pandas = "*"
ping3 = "*"
pyserial = "3.5"
retry = "*"
argon2-cffi = "*"
rshell = "*"
mpy_cross = "*"
pyflakes = "*"
psutil = "*"
objgraph = "*"
nicegui = "*"
rich = "*"
#ip2geotools = "*" # Remove the # comment at the start of this line if you wish the server
                   # access log file to contain country, region and city information.
                   # The down side to this is that about 70 extra python modules are pulled
                   # in making installation longer.

[tool.poetry.scripts]
ct6_dash = "ct6.ct6_dash:main"
ct6_db_store = "ct6.ct6_db_store:main"
ct6_mfg_tool = "ct6.ct6_mfg_tool:main"
ct6_dash_mgr = "ct6.ct6_dash_mgr:main"
ct6_tool = "ct6.ct6_tool:main"
ct6_configurator = "ct6.ct6_configurator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
