[tool.poetry]
name = "ct6"
version = "11.6"
description = ""
authors = ["Paul Austen <pjaos@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ct6" },
    { include = "lib" },
    { include = "picow" }
]
include = [
    { path = "assets", format = ["sdist", "wheel"] },
    { path = "pyproject.toml", format = ["sdist", "wheel"] },
]


[tool.poetry.dependencies]
pyreadline3 = "*"
python = ">=3.10.12,<3.14"
# Fix security vulnerability reported by github dependabot.
cryptography = "^44.0.1"
paramiko = "^3.4.0"
numpy = "*"
# requires (on debian based Linux platforms)
# sudo apt-get install python3-dev default-libmysqlclient-dev build-essential
# to install mysqlclient
mysql-connector-python = "*"
mysqlclient = "*"
paho-mqtt = "*"
p3lib = "^1.1.115"
bokeh = "^3.7.0"
requests = "*"
ifaddr = "*"
pandas = "*"
ping3 = "*"
pyserial = "3.5"
argon2-cffi = "*"
rshell = "*"
mpy_cross = "*"
pyflakes = "*"
psutil = "*"
objgraph = "*"
nicegui = "*"
rich = "*"
test_equipment = "*"
bleak = "^0.22.3"
h11 = "^0.16.0"    # Fixup for https://github.com/advisories/GHSA-vqfr-h8mv-ghfj
#ip2geotools = "*" # Remove the # comment at the start of this line if you wish the server
                   # access log file to contain country, region and city information.
                   # The down side to this is that about 70 extra python modules are pulled
                   # in making installation longer.

[tool.poetry.scripts]
ct6_dash = "ct6.ct6_dash:main"
ct6_db_store = "ct6.ct6_db_store:main"
ct6_mfg_tool = "ct6.ct6_mfg_tool:main"
ct6_dash_mgr = "ct6.ct6_dash_mgr:main"
ct6_tool = "ct6.ct6_tool:main"
ct6_configurator = "ct6.ct6_configurator:main"
ct6_stats = "ct6.ct6_stats:main"
ct6_app = "ct6.ct6_app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
